@@ -1,3 +1,5 @@
+* Manage None values on fields
+
 Version 0.21 - 2016-08-09
 * Add python 3 support
 
